--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "devDependencies": {
     "karma": "<=0.11.14",
     "karma-jasmine": "~0.1.0",
-    "karma-requirejs": "~0.1.0",
     "karma-chrome-launcher": "~0.1.0",
     "karma-ie-launcher": "~0.1.1",
     "karma-firefox-launcher": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-safari-launcher": "~0.1.1",
     "loadbuilder": ">=0.4.2",
-    "uglify-js": "~2.3.6"
+    "uglify-js": "~2.3.6",
+    "karma-commonjs": "0.0.9"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start --browsers Firefox --single-run"
