--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "karma-safari-launcher": "~0.1.1",
     "loadbuilder": ">=0.4.2",
     "uglify-js": "~2.3.6",
-    "karma-commonjs": "0.0.9"
+    "karma-commonjs": "0.0.9",
+    "webpack": "~1.3.1-beta4"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --browsers Firefox --single-run"
+    "test": "./node_modules/karma/bin/karma start --browsers Firefox --single-run",
+    "build": "webpack --progress --colors && webpack --progress --colors --output-file flight.min.js --optimize-minimize",
+    "watch": "./node_modules/karma/bin/karma start --browsers Chrome"
   }
 }
