--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-safari-launcher": "~0.1.1",
     "loadbuilder": ">=0.4.2",
-    "uglify-js": "~2.3.6"
+    "uglify-js": "~2.3.6",
+    "webpack": "~1.3.1-beta4"
   },
   "scripts": {
     "build": "npm run webpack & npm run webpack-minified",
     "test": "karma start --browsers Firefox --single-run",
-    "watch": "karma start"
+    "watch": "karma start",
+    "webpack": "webpack --progress --colors",
+    "webpack-minified": "webpack --progress --colors --optimize-minimize --output-file flight.min.js"
   }
 }
